Fix Overlapping window.onload Events in JavaScript

--- a/style.css
+++ b/style.css
@@ -1054,6 +1054,19 @@ header {
   padding-bottom: 25px;
 }
 
+.year-selector {
+  display: flex;
+  justify-content: flex-start;
+  padding: 10px;
+}
+
+#year-select {
+  margin-left: 10px;
+  padding: 5px;
+  border: 1px solid #0A2944;
+  border-radius: 5px;
+}
+
 #classification-container ul {
   list-style-type: none;
   padding: 0;
